--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ img{
 }
 
 .features {
-    display: flex;
+    display: flex;   
     justify-content: center;
     padding: 40px;
 }
@@ -39,6 +39,7 @@ img{
     background: white;
     padding: 20px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+    
 }
 
 .cta {
@@ -48,7 +49,28 @@ img{
 }
 
 footer {
+    justify-items: center;
     background: #222;
     color: white;
     padding: 10px;
+}
+
+.btn2 {
+    display: inline-block;
+    margin: 20px;
+    padding: 10px 20px;
+    background: white;
+    color: #007BFF;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.software{
+    line-height: 1.5;
+    text-align: justify;
+    margin: 20px;   
+}
+
+li{
+    text-align: justify;
 }
